[gd_scene load_steps=23 format=2]

[ext_resource path="res://GameBoard/Cursor/Cursor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Units/Unit.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameBoard/GameBoard.gd" type="Script" id=3]
[ext_resource path="res://GameBoard/Grid.tres" type="Resource" id=4]
[ext_resource path="res://UnitOverlay/UnitOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameBoard/UnitPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://Units/squirrel.png" type="Texture" id=7]
[ext_resource path="res://Units/bear.png" type="Texture" id=8]
[ext_resource path="res://Units/bugcat.png" type="Texture" id=9]
[ext_resource path="res://Background/Map.tscn" type="PackedScene" id=10]
[ext_resource path="res://UserInterface/Interface.tscn" type="PackedScene" id=11]
[ext_resource path="res://WorldCamera.gd" type="Script" id=12]
[ext_resource path="res://UnitOverlay/AttackOverlay.tscn" type="PackedScene" id=13]
[ext_resource path="res://GameBoard/Attack/AttackPath.tscn" type="PackedScene" id=14]
[ext_resource path="res://Units/Stats/UnitStats.gd" type="Script" id=15]
[ext_resource path="res://Units/Actions/Attacks/basic_attack.tres" type="Resource" id=16]

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Resource" id=4]
script = ExtResource( 15 )
max_health = 100.0
base_attack = 10.0
base_defense = 10.0
base_speed = 70.0
base_hit_chance = 100.0
base_evasion = 0.0

[sub_resource type="Curve2D" id=2]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Resource" id=5]
script = ExtResource( 15 )
max_health = 100.0
base_attack = 10.0
base_defense = 10.0
base_speed = 70.0
base_hit_chance = 100.0
base_evasion = 0.0

[sub_resource type="Curve2D" id=1]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Resource" id=6]
script = ExtResource( 15 )
max_health = 100.0
base_attack = 10.0
base_defense = 10.0
base_speed = 70.0
base_hit_chance = 100.0
base_evasion = 0.0

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource( 10 )]

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 3 )
grid = ExtResource( 4 )

[node name="AttackPath" parent="GameBoard" instance=ExtResource( 14 )]
grid = ExtResource( 4 )

[node name="AttackOverlay" parent="GameBoard" instance=ExtResource( 13 )]
modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource( 5 )]

[node name="UnitPath" parent="GameBoard" instance=ExtResource( 6 )]

[node name="Cursor" parent="GameBoard" instance=ExtResource( 1 )]

[node name="Squirrel" parent="GameBoard" instance=ExtResource( 2 )]
position = Vector2( 355.298, 298.556 )
curve = SubResource( 3 )
actions = [ ExtResource( 16 ) ]
skin = ExtResource( 7 )
move_range = 5
skin_offset = Vector2( 6, 17 )
stats = SubResource( 4 )

[node name="Cat" parent="GameBoard" instance=ExtResource( 2 )]
position = Vector2( 850.293, 412.465 )
curve = SubResource( 2 )
actions = [ ExtResource( 16 ) ]
is_friendly = false
skin = ExtResource( 9 )
move_range = 8
skin_offset = Vector2( 5, 12 )
stats = SubResource( 5 )

[node name="Bear" parent="GameBoard" instance=ExtResource( 2 )]
position = Vector2( 600, 480 )
curve = SubResource( 1 )
actions = [ ExtResource( 16 ) ]
skin = ExtResource( 8 )
move_range = 3
skin_offset = Vector2( 2, 9 )
stats = SubResource( 6 )

[node name="Interface" parent="." instance=ExtResource( 11 )]

[node name="WorldCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 12 )

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
